<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xunxiaozdh.maintain.DetailsActivity">

    <com.xunxiaozdh.mycontrol.MyTitleLayout
        android:id="@id/my_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:title_text = "检查项"/>

    <android.support.constraint.Guideline
        android:id="@+id/ref_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.25"/>
    <android.support.constraint.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.95"/>


    <TextView
        android:id="@+id/machine_code_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/my_title"
        app:layout_constraintRight_toLeftOf="@id/ref_line"
        android:layout_marginTop="20dp"
        android:text="@string/machine_code"/>

    <EditText
        android:id="@+id/machine_code_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/ref_line"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        android:layout_marginRight="20dp"
        app:layout_constraintBaseline_toBaselineOf="@id/machine_code_label"
        android:hint="@string/unknown"
        android:focusable="false"
        />

    <TextView
        android:id="@+id/machine_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/machine_code_label"
        app:layout_constraintRight_toLeftOf="@id/ref_line"
        android:layout_marginTop="20dp"
        android:text="@string/machine_name"/>

    <EditText
        android:id="@+id/machine_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/ref_line"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        android:layout_marginRight="20dp"
        app:layout_constraintBaseline_toBaselineOf="@id/machine_name_label"
        android:hint="@string/unknown"
        android:focusable="false"
        />

    <TextView
        android:id="@+id/check_item_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/machine_name_label"
        app:layout_constraintRight_toLeftOf="@id/ref_line"
        android:layout_marginTop="20dp"
        android:text="@string/check_item"/>

    <EditText
        android:id="@+id/check_item_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/ref_line"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        android:layout_marginRight="20dp"
        app:layout_constraintBaseline_toBaselineOf="@id/check_item_label"
        android:hint="@string/unknown"
        android:focusable="false"
        />

    <TextView
        android:id="@+id/check_params_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/check_item_label"
        app:layout_constraintRight_toLeftOf="@id/ref_line"
        android:layout_marginTop="20dp"
        android:text="@string/check_params"/>

    <EditText
        android:id="@+id/check_params_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/ref_line"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        android:layout_marginRight="20dp"
        app:layout_constraintBaseline_toBaselineOf="@id/check_params_label"
        android:hint="@string/unknown"
        android:focusable="false"
        android:maxLines="2"
        />

    <TextView
        android:id="@+id/important_level_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/check_params_label"
        app:layout_constraintRight_toLeftOf="@id/ref_line"
        android:layout_marginTop="20dp"
        android:text="@string/important_level"/>
    <EditText
        android:id="@+id/important_level_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/ref_line"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        android:layout_marginRight="20dp"
        app:layout_constraintBaseline_toBaselineOf="@id/important_level_label"
        android:hint="@string/unknown"
        android:focusable="false"
        />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/check_result_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/important_level_label"
        android:layout_margin="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/check_item_button_ok"
        android:background="@color/LightSteelBlue"
        >
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/check_result_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/check_result_layout"
        app:layout_constraintRight_toLeftOf="@id/ref_line"
        android:layout_marginTop="20dp"
        android:text="@string/check_result"/>
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toRightOf="@id/ref_line"
        app:layout_constraintTop_toTopOf="@id/check_result_label"
        app:layout_constraintBottom_toBottomOf="@id/check_result_label"
        >
        <RadioButton
            android:id="@+id/radio_qualified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qualified"
            android:textColor="@color/Green"
            android:layout_marginLeft="20dp"/>

        <RadioButton
            android:id="@+id/radio_unqualified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unqualified"
            android:textColor="@color/Red"
            android:layout_marginLeft="60dp"/>
    </RadioGroup>

    <TextView
        android:id="@+id/description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/check_result_label"
        app:layout_constraintRight_toLeftOf="@id/ref_line"
        android:layout_marginTop="20dp"
        android:text="@string/remarks"/>

    <EditText
        android:id="@+id/description_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toRightOf="@id/ref_line"
        app:layout_constraintTop_toTopOf="@id/description_label"
        app:layout_constraintRight_toRightOf="@id/check_result_layout"
        app:layout_constraintBottom_toBottomOf="@id/check_result_layout"
        android:inputType="textMultiLine"
        android:gravity="left|top"
        android:background="@color/White"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:hint="填写检测结果说明"
        android:imeOptions="actionDone"
        />
    <Button
        android:id="@+id/check_item_button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/check_item_button_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/check_item_button_cancel"
        app:layout_constraintRight_toLeftOf="@+id/check_item_button_cancel"
        android:layout_marginRight="70dp"
        android:text="确定"
        android:minWidth="100dp"
        android:background="@color/Green"
        />
    <Button
        android:id="@+id/check_item_button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/check_result_layout"
        app:layout_constraintRight_toRightOf="@id/check_result_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="取消"
        android:minWidth="100dp"
        android:background="@color/Red"/>


</android.support.constraint.ConstraintLayout>
