<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo_500"
        app:layout_constraintDimensionRatio="h,15:9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_check"/>

    <TextView
        android:id="@+id/logo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/logo_image"
        app:layout_constraintRight_toRightOf="@+id/logo_image"
        android:text="@string/logo_text"
        android:textColor="@color/White"
        android:textSize="22sp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/button_check"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/DodgerBlue"
        android:layout_margin="8dp"
        android:textColor="@color/White"
        android:textSize="20sp"
        android:text="@string/item_one"
        />
    <Button
        android:id="@+id/button_maintain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_check"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/DodgerBlue"
        android:layout_margin="8dp"
        android:textColor="@color/White"
        android:textSize="20sp"
        android:text="@string/item_two"
        />


</android.support.constraint.ConstraintLayout>