<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xunxiaozdh.maintain.CheckActivity">

    <com.xunxiaozdh.mycontrol.MyTitleLayout
        android:id="@+id/my_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:title_text = "@string/item_one"
        />
    <android.support.constraint.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.25"/>
    <android.support.constraint.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.95"/>

    <TextView
        android:id="@+id/machine_code_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/my_title"
        app:layout_constraintRight_toLeftOf="@id/left_guideline"
        android:layout_marginTop="20dp"
        android:text="@string/machine_code"/>

    <EditText
        android:id="@+id/machine_code_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        android:layout_marginRight="20dp"
        app:layout_constraintBaseline_toBaselineOf="@id/machine_code_label"
        android:hint="@string/scan_QR_code"
        android:maxLines="1"
        android:scrollHorizontally="true"
        />

    <TextView
        android:id="@+id/machine_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/machine_code_label"
        app:layout_constraintRight_toLeftOf="@id/left_guideline"
        android:layout_marginTop="20dp"
        android:text="@string/machine_name"/>

    <EditText
        android:id="@+id/machine_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/left_guideline"
        app:layout_constraintRight_toRightOf="@id/right_guideline"
        android:layout_marginRight="20dp"
        app:layout_constraintBaseline_toBaselineOf="@id/machine_name_label"
        android:focusable="false"
        android:hint="自动生成"
        />


    <ListView
        android:id="@+id/check_item_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/machine_name_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="20dp"></ListView>

</android.support.constraint.ConstraintLayout>
