<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <android.support.constraint.ConstraintLayout
        android:id="@+id/machine_info_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/DodgerBlue"
        android:layout_margin="5dp"
        >

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_begin="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="horizontal" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline2"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintTop_toTopOf="@id/machine_info_header"
            app:layout_constraintBottom_toBottomOf="@id/machine_info_header"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/machine_code_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintLeft_toLeftOf="@+id/guideline2"
            android:text="@string/machine_code"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:textColor="@color/White"
            />
        <TextView
            android:id="@+id/machine_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/machine_code_label"
            app:layout_constraintLeft_toLeftOf="@+id/guideline2"
            android:text="@string/machine_name"
            android:textSize="20sp"
            android:layout_margin="10dp"
            android:textColor="@color/White"
            />

        <EditText
            android:id="@+id/machine_code_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/machine_code_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/machine_code_label"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="18sp"
            android:minWidth="200sp"
            android:hint="按扫描键扫描条码"
            android:textColor="@color/White"
            android:maxLines="1"
            android:textColorHint="@color/LightSteelBlue"/>

        <EditText
            android:id="@+id/machine_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@+id/machine_name_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/machine_name_label"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="18sp"
            android:hint="无需输入自动获取"
            android:focusable="false"
            android:minWidth="200sp"
            android:textColor="@color/White"
            android:maxLines="1"
            android:textColorHint="@color/LightSteelBlue"/>
    </android.support.constraint.ConstraintLayout>


    <LinearLayout
        android:id="@+id/split_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/Gray"
        app:layout_constraintTop_toBottomOf="@+id/machine_info_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/split_line"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <TextView
            android:id="@+id/history_list_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_record"
            android:textSize="25sp"
            android:layout_margin="10dp" />

        <ListView
            android:id="@+id/history_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            ></ListView>

    </LinearLayout>




</android.support.constraint.ConstraintLayout>